@@ -29,6 +29,12 @@ HOW TO UPDATE?
 - Please report any issue!
 
 
+- Misc: Switched to using a variant of fnv1a hash function instead of CRC32.
+  Hashing is roughly 50% faster (assuming the CRC32 table was already in cache), and
+  mostly the main benefit of this change is we don't waste 1KB of cache for the CRC32
+  table, ultimately improving performances everywhere by a small margin.
+
+
 -----------------------------------------------------------------------
  VERSION 1.69 (Released 2019-03-13)
 -----------------------------------------------------------------------
